--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  yaml: ^3.1.3
 
 # Assets for icons/logos referenced by specs (Flutter bundling; JS/TS may not use this).
 flutter:
