--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -1,24 +1,28 @@
 name: autocomplete
 description: Fig-style CLI completion specs and runtime (parse command, load spec, get suggestions). Pure Dart, no Flutter.
-version: 0.1.0
-repository: https://github.com/withfig/autocomplete
-documentation: https://github.com/withfig/autocomplete#readme
+version: 0.0.1
+repository: https://github.com/littlewrite/autocomplete/tree/main/dart
+issue_tracker: https://github.com/littlewrite/autocomplete/issues
+topics:
+  - cli
+  - autocomplete
+  - shell
+  - fig
+  - runtime
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
-  flutter: ">=1.17.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   yaml: ^3.1.3
 
 # Assets for icons/logos referenced by specs (Flutter bundling; JS/TS may not use this).
+# The 'flutter' section here allows a consuming Flutter app to bundle these assets,
+# even though this package does not depend on the Flutter SDK for its code.
 flutter:
   assets:
     - assets/icons/
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^2.0.0
+  lints: ^2.0.0
+  test: ^1.21.0
